macos/Runner/bridge_generated.h

typedef struct _Dart_Handle* Dart_Handle;
typedef int64_t DartPort;
typedef bool (*DartPostCObjectFnType)(DartPort port_id, void *message);
typedef struct wire_uint_8_list {
  uint8_t *ptr;
  int32_t len;
} wire_uint_8_list;
typedef struct wire_uint_16_list {
  uint16_t *ptr;
  int32_t len;
} wire_uint_16_list;
typedef struct wire_LogicControl {
  uint8_t index;
  uint8_t scene;
  struct wire_uint_8_list *values;
} wire_LogicControl;
void store_dart_post_cobject(DartPostCObjectFnType ptr);
Dart_Handle get_dart_object(uintptr_t ptr);
void drop_dart_object(uintptr_t ptr);
uintptr_t new_dart_opaque(Dart_Handle handle);
intptr_t init_frb_dart_api_dl(void *obj);
void wire_init_log(int64_t port_);
void wire_ble_validate_response(int64_t port_, struct wire_uint_8_list *data);
void wire_ble_response_parse_u16(int64_t port_, struct wire_uint_8_list *data);
void wire_ble_response_parse_bool(int64_t port_, struct wire_uint_8_list *data);
void wire_ble_ports(int64_t port_);
void wire_ble_scan(int64_t port_, uint8_t typee);
void wire_ble_lecconn(int64_t port_, struct wire_uint_8_list *addr, uint8_t add_type);
void wire_ble_ledisc(int64_t port_, uint8_t index);
void wire_ble_lesend(int64_t port_, uint8_t index, struct wire_uint_8_list *data);
void wire_ble_tpmode(int64_t port_);
void wire_ble_reboot(int64_t port_);
void wire_ble_chinfo(int64_t port_);
void wire_ble_uartcfg(int64_t port_);
void wire_hal_generate_get_holdings(int64_t port_, uint8_t unit_id, uint16_t reg, uint16_t count);
void wire_hal_generate_get_coils(int64_t port_, uint8_t unit_id, uint16_t reg, uint16_t count);
void wire_hal_generate_set_coils(int64_t port_,
                                 uint8_t unit_id,
                                 uint16_t reg,
                                 struct wire_uint_8_list *values);
struct wire_LogicControl *new_box_autoadd_logic_control_0(void);
struct wire_uint_16_list *new_uint_16_list_0(int32_t len);
struct wire_uint_8_list *new_uint_8_list_0(int32_t len);