lib/bridge_generated.io.dart

// AUTO GENERATED FILE, DO NOT EDIT.
// Generated by `flutter_rust_bridge`@ 1.75.3.
// ignore_for_file: non_constant_identifier_names, unused_element, duplicate_ignore, directives_ordering, curly_braces_in_flow_control_structures, unnecessary_lambdas, slash_for_doc_comments, prefer_const_literals_to_create_immutables, implicit_dynamic_list_literal, duplicate_import, unused_import, unnecessary_import, prefer_single_quotes, prefer_const_constructors, use_super_parameters, always_use_package_imports, annotate_overrides, invalid_use_of_protected_member, constant_identifier_names, invalid_use_of_internal_member, prefer_is_empty, unnecessary_const

import "bridge_definitions.dart";
import 'dart:convert';
import 'dart:async';
import 'package:meta/meta.dart';
import 'package:flutter_rust_bridge/flutter_rust_bridge.dart';
import 'package:uuid/uuid.dart';
import 'ffi.io.dart' if (dart.library.html) 'ffi.web.dart';
import 'bridge_generated.dart';
export 'bridge_generated.dart';
import 'dart:ffi' as ffi;

class NativePlatform extends FlutterRustBridgeBase<NativeWire> {
  NativePlatform(ffi.DynamicLibrary dylib) : super(NativeWire(dylib));

// Section: api2wire

  @protected
  ffi.Pointer<wire_uint_8_list> api2wire_String(String raw) {
    return api2wire_uint_8_list(utf8.encoder.convert(raw));
  }

  @protected
  ffi.Pointer<wire_LogicControl> api2wire_box_autoadd_logic_control(
      LogicControl raw) {
    final ptr = inner.new_box_autoadd_logic_control_0();
    _api_fill_to_wire_logic_control(raw, ptr.ref);
    return ptr;
  }

  @protected
  ffi.Pointer<wire_uint_16_list> api2wire_uint_16_list(Uint16List raw) {
    final ans = inner.new_uint_16_list_0(raw.length);
    ans.ref.ptr.asTypedList(raw.length).setAll(0, raw);
    return ans;
  }

  @protected
  ffi.Pointer<wire_uint_8_list> api2wire_uint_8_list(Uint8List raw) {
    final ans = inner.new_uint_8_list_0(raw.length);
    ans.ref.ptr.asTypedList(raw.length).setAll(0, raw);
    return ans;
  }
// Section: finalizer

// Section: api_fill_to_wire

  void _api_fill_to_wire_box_autoadd_logic_control(
      LogicControl apiObj, ffi.Pointer<wire_LogicControl> wireObj) {
    _api_fill_to_wire_logic_control(apiObj, wireObj.ref);
  }

  void _api_fill_to_wire_logic_control(
      LogicControl apiObj, wire_LogicControl wireObj) {
    wireObj.index = api2wire_u8(apiObj.index);
    wireObj.scene = api2wire_u8(apiObj.scene);
    wireObj.values = api2wire_uint_8_list(apiObj.values);
  }
}

// ignore_for_file: camel_case_types, non_constant_identifier_names, avoid_positional_boolean_parameters, annotate_overrides, constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint

/// generated by flutter_rust_bridge
class NativeWire implements FlutterRustBridgeWireBase {
  @internal
  late final dartApi = DartApiDl(init_frb_dart_api_dl);

  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  NativeWire(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  NativeWire.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  void store_dart_post_cobject(
    DartPostCObjectFnType ptr,
  ) {
    return _store_dart_post_cobject(
      ptr,
    );
  }

  late final _store_dart_post_cobjectPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(DartPostCObjectFnType)>>(
          'store_dart_post_cobject');
  late final _store_dart_post_cobject = _store_dart_post_cobjectPtr
      .asFunction<void Function(DartPostCObjectFnType)>();

  Object get_dart_object(
    int ptr,
  ) {
    return _get_dart_object(
      ptr,
    );
  }

  late final _get_dart_objectPtr =
      _lookup<ffi.NativeFunction<ffi.Handle Function(ffi.UintPtr)>>(
          'get_dart_object');
  late final _get_dart_object =
      _get_dart_objectPtr.asFunction<Object Function(int)>();

  void drop_dart_object(
    int ptr,
  ) {
    return _drop_dart_object(
      ptr,
    );
  }

  late final _drop_dart_objectPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.UintPtr)>>(
          'drop_dart_object');
  late final _drop_dart_object =
      _drop_dart_objectPtr.asFunction<void Function(int)>();

  int new_dart_opaque(
    Object handle,
  ) {
    return _new_dart_opaque(
      handle,
    );
  }

  late final _new_dart_opaquePtr =
      _lookup<ffi.NativeFunction<ffi.UintPtr Function(ffi.Handle)>>(
          'new_dart_opaque');
  late final _new_dart_opaque =
      _new_dart_opaquePtr.asFunction<int Function(Object)>();

  int init_frb_dart_api_dl(
    ffi.Pointer<ffi.Void> obj,
  ) {
    return _init_frb_dart_api_dl(
      obj,
    );
  }

  late final _init_frb_dart_api_dlPtr =
      _lookup<ffi.NativeFunction<ffi.IntPtr Function(ffi.Pointer<ffi.Void>)>>(
          'init_frb_dart_api_dl');
  late final _init_frb_dart_api_dl = _init_frb_dart_api_dlPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  void wire_init_log(
    int port_,
  ) {
    return _wire_init_log(
      port_,
    );
  }

  late final _wire_init_logPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
          'wire_init_log');
  late final _wire_init_log =
      _wire_init_logPtr.asFunction<void Function(int)>();

  void wire_ble_validate_response(
    int port_,
    ffi.Pointer<wire_uint_8_list> data,
  ) {
    return _wire_ble_validate_response(
      port_,
      data,
    );
  }

  late final _wire_ble_validate_responsePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64,
              ffi.Pointer<wire_uint_8_list>)>>('wire_ble_validate_response');
  late final _wire_ble_validate_response = _wire_ble_validate_responsePtr
      .asFunction<void Function(int, ffi.Pointer<wire_uint_8_list>)>();

  void wire_ble_response_parse_u16(
    int port_,
    ffi.Pointer<wire_uint_8_list> data,
  ) {
    return _wire_ble_response_parse_u16(
      port_,
      data,
    );
  }

  late final _wire_ble_response_parse_u16Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64,
              ffi.Pointer<wire_uint_8_list>)>>('wire_ble_response_parse_u16');
  late final _wire_ble_response_parse_u16 = _wire_ble_response_parse_u16Ptr
      .asFunction<void Function(int, ffi.Pointer<wire_uint_8_list>)>();

  void wire_ble_response_parse_bool(
    int port_,
    ffi.Pointer<wire_uint_8_list> data,
  ) {
    return _wire_ble_response_parse_bool(
      port_,
      data,
    );
  }

  late final _wire_ble_response_parse_boolPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64,
              ffi.Pointer<wire_uint_8_list>)>>('wire_ble_response_parse_bool');
  late final _wire_ble_response_parse_bool = _wire_ble_response_parse_boolPtr
      .asFunction<void Function(int, ffi.Pointer<wire_uint_8_list>)>();

  void wire_ble_ports(
    int port_,
  ) {
    return _wire_ble_ports(
      port_,
    );
  }

  late final _wire_ble_portsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
          'wire_ble_ports');
  late final _wire_ble_ports =
      _wire_ble_portsPtr.asFunction<void Function(int)>();

  void wire_ble_scan(
    int port_,
    int typee,
  ) {
    return _wire_ble_scan(
      port_,
      typee,
    );
  }

  late final _wire_ble_scanPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Uint8)>>(
          'wire_ble_scan');
  late final _wire_ble_scan =
      _wire_ble_scanPtr.asFunction<void Function(int, int)>();

  void wire_ble_lecconn(
    int port_,
    ffi.Pointer<wire_uint_8_list> addr,
    int add_type,
  ) {
    return _wire_ble_lecconn(
      port_,
      addr,
      add_type,
    );
  }

  late final _wire_ble_lecconnPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_uint_8_list>,
              ffi.Uint8)>>('wire_ble_lecconn');
  late final _wire_ble_lecconn = _wire_ble_lecconnPtr
      .asFunction<void Function(int, ffi.Pointer<wire_uint_8_list>, int)>();

  void wire_ble_ledisc(
    int port_,
    int index,
  ) {
    return _wire_ble_ledisc(
      port_,
      index,
    );
  }

  late final _wire_ble_lediscPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Uint8)>>(
          'wire_ble_ledisc');
  late final _wire_ble_ledisc =
      _wire_ble_lediscPtr.asFunction<void Function(int, int)>();

  void wire_ble_lesend(
    int port_,
    int index,
    ffi.Pointer<wire_uint_8_list> data,
  ) {
    return _wire_ble_lesend(
      port_,
      index,
      data,
    );
  }

  late final _wire_ble_lesendPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Uint8,
              ffi.Pointer<wire_uint_8_list>)>>('wire_ble_lesend');
  late final _wire_ble_lesend = _wire_ble_lesendPtr
      .asFunction<void Function(int, int, ffi.Pointer<wire_uint_8_list>)>();

  void wire_ble_tpmode(
    int port_,
  ) {
    return _wire_ble_tpmode(
      port_,
    );
  }

  late final _wire_ble_tpmodePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
          'wire_ble_tpmode');
  late final _wire_ble_tpmode =
      _wire_ble_tpmodePtr.asFunction<void Function(int)>();

  void wire_ble_reboot(
    int port_,
  ) {
    return _wire_ble_reboot(
      port_,
    );
  }

  late final _wire_ble_rebootPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
          'wire_ble_reboot');
  late final _wire_ble_reboot =
      _wire_ble_rebootPtr.asFunction<void Function(int)>();

  void wire_ble_chinfo(
    int port_,
  ) {
    return _wire_ble_chinfo(
      port_,
    );
  }

  late final _wire_ble_chinfoPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
          'wire_ble_chinfo');
  late final _wire_ble_chinfo =
      _wire_ble_chinfoPtr.asFunction<void Function(int)>();

  void wire_ble_uartcfg(
    int port_,
  ) {
    return _wire_ble_uartcfg(
      port_,
    );
  }

  late final _wire_ble_uartcfgPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64)>>(
          'wire_ble_uartcfg');
  late final _wire_ble_uartcfg =
      _wire_ble_uartcfgPtr.asFunction<void Function(int)>();

  void wire_hal_generate_get_holdings(
    int port_,
    int unit_id,
    int reg,
    int count,
  ) {
    return _wire_hal_generate_get_holdings(
      port_,
      unit_id,
      reg,
      count,
    );
  }

  late final _wire_hal_generate_get_holdingsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Uint8, ffi.Uint16,
              ffi.Uint16)>>('wire_hal_generate_get_holdings');
  late final _wire_hal_generate_get_holdings =
      _wire_hal_generate_get_holdingsPtr
          .asFunction<void Function(int, int, int, int)>();

  void wire_hal_generate_get_coils(
    int port_,
    int unit_id,
    int reg,
    int count,
  ) {
    return _wire_hal_generate_get_coils(
      port_,
      unit_id,
      reg,
      count,
    );
  }

  late final _wire_hal_generate_get_coilsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Uint8, ffi.Uint16,
              ffi.Uint16)>>('wire_hal_generate_get_coils');
  late final _wire_hal_generate_get_coils = _wire_hal_generate_get_coilsPtr
      .asFunction<void Function(int, int, int, int)>();

  void wire_hal_generate_set_coils(
    int port_,
    int unit_id,
    int reg,
    ffi.Pointer<wire_uint_8_list> values,
  ) {
    return _wire_hal_generate_set_coils(
      port_,
      unit_id,
      reg,
      values,
    );
  }
